# rlm-kit

./: .cursorrules  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile.gateway  Makefile  README.md  path_utils.py  pyproject.toml
.cursor/: mcp.json  mcp.json.remote.example
.github/: copilot-instructions.md
docs/: INDEX.md  README.md
examples/: agent_example.py  lm_in_repl.py  mcp_integration_example.py  rlm_cli_agent.py  rlm_example.py
rlm/: agent_enforcer.py  agent_rlm.py  mcp_integration.py
scripts/: _repo_root.py  ci_provenance_gate.py  ci_rlm_check.py  deploy_gateway.sh  install_deploy_gateway.py  install_ide_config.py  install_monitoring.py  install_thin_workspace.py  remote_gateway_config.json.example  rlm_cli_interface.py  rlm_mcp_gateway.py  rlm_mcp_server.py  setup_thin_workspace.py  test_mcp_gateway.py  verify_setup.py
tests/: mock_lm.py  test_agent_rlm.py  test_async_completion.py  test_bare_except.py  test_budget_and_limits.py  test_call_history.py  test_client_timeout.py  test_comms_utils.py  test_compaction.py  test_custom_tools.py  test_env_configs.py  test_exec_script_templates.py  test_file_cache.py  test_graph_tracker.py  test_imports.py  test_lm_handler_model_preferences.py  test_local_repl.py  test_mcp_cancellation.py  test_mcp_gateway_prompts.py  test_mcp_gateway_resources.py  test_mcp_gateway_session.py  test_multi_turn_integration.py  test_parsing.py  test_path_validator.py  test_prompts.py  test_recursive_subcalls.py  test_retry.py  test_rlm_backend_protocol.py  test_rlm_config.py  test_rlm_utils.py  test_sandbox.py  (+8 more)
(+196 files in other folders)
